# devrel_assessment

./: README.md
projects/devrel_assessment/: README.md  pyproject.toml
projects/devrel_assessment/.algokit/: .copier-answers.yml
projects/devrel_assessment/smart_contracts/: __main__.py
projects/devrel_assessment/smart_contracts/artifacts/hello_world/: HelloWorld.approval.puya.map  HelloWorld.approval.teal  HelloWorld.arc32.json  hello_world_client.py
projects/devrel_assessment/smart_contracts/hello_world/: contract.py  deploy_config.py  hello_world_test.py
